# fake-news-detection-ml

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
detection/: __init__.py  dataset.py
detection/modeling/: predict.py
models/predictions/: test_predictions.csv
models/trained/: fake_news_detector.pkl
notebooks/: 0.1-mz-initial-eda.ipynb  1.1-mz-data-cleaning-and-feature-creation.ipynb  2.1-mz-visualization.ipynb  3.1-mz-modeling.ipynb  4.1-mz-publication.ipynb
reports/: report.md  sample-predictions.md
src/: config.py  dataset.py  features.py  plots.py
src/modeling/: modeling.py  optuna_optimization.py  predict.py  train.py
src/preprocessing/: preprocessing.py
